# Syngenta-Hack25

./: README.md  pyproject.toml
src/: main.py  models.py  uvicorn.service
src/api_interfaces/: example_df.csv  forecast_api.py  indicator_calculation.py  indicator_calculation_wrapper.py  indicator_period_evaluation.py  soil_weather_archive_api.py
src/utils/: calc_issues.py  indicator_calculation.py  indicator_period_evaluation.py  profile_creation.py  trigger_table.py
