[project]
name = "syngenta-start-global-hackathon-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "meteoblue-dataset-sdk>=1.3.5",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
